--- a/DDGClient/src/main/res/values/strings.xml
+++ b/DDGClient/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">DDGClient</string>
     <string name="buttonSearchCaption">Search!</string>
-    <string name="queryStringCaption">Query String sent to Duckduckgo</string>
+    <string name="queryStringCaption"><b><u>Query String sent to Duckduckgo:</u></b></string>
     <string name="queryStringResult">queryString</string>
-    <string name="definitionCaption">Definition:</string>
+    <string name="definitionCaption"><b><u>Definition:</u></b></string>
     <string name="definitionResult">Definition</string>
-    <string name="definitionURLCaption">Definition Source URL:</string>
+    <string name="definitionURLCaption"><b><u>Definition Source URL:</u></b></string>
     <string name="definitionURLResult">DefinitionURL</string>
-    <string name="wordSearchCaption">Word to define:</string>
+    <string name="wordSearchCaption"><b><u>Word to define:</u></b></string>
+    <string name="rawJsonCaption"><b><u>Raw Json:</u></b></string>
 </resources>
